--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     }
   </script>
   <footer>
-    <p><a href="https://lixhanalghaib.github.io/thedict/" style="color: #3498db;">Contribute to this project</a></p>
+    <p><a href="https://github.com/lixanalghaib/Thedict/tree/main" style="color: #3498db;">Contribute to this project</a></p>
   </footer>
 </body>
 </html>
