font change from open sans to helvetica try 1

--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
   <meta property="og:type" content="website">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap">
   <style>
-    body {
-      font-family: 'Open Sans', sans-serif;
-      text-align: center;
-      margin: 0;
-      padding: 0;
-      background-color: #f0f4f8;
-      color: #333;
-      min-height: 100vh;
-      transition: background 0.3s, color 0.3s;
-    }
+   body {
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  background-color: #f0f4f8;
+  color: #333;
+}
     h1 {
       margin-top: 20px;
       font-size: 24px;
