--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <meta property="og:title" content="Thedict – Thesaurus and Dictionary">
   <meta property="og:description" content="A simple web-based thesaurus and dictionary built with HTML and JavaScript.">
   <meta property="og:type" content="website">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
   <style>
    body {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Poppins', Arial, sans-serif;
+}
   text-align: center;
   margin: 0;
   padding: 0;
