font change to lobster try 1

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <meta property="og:title" content="Thedict – Thesaurus and Dictionary">
   <meta property="og:description" content="A simple web-based thesaurus and dictionary built with HTML and JavaScript.">
   <meta property="og:type" content="website">
-  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
   <style>
    body {
-  font-family: 'Poppins', Arial, sans-serif;
+  font-family: 'Lobster', cursive;
 }
   text-align: center;
   margin: 0;
