--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   text-align: center;
   margin: 0;
   padding: 0;
-  background-color: #f0f4f8;
+  background-color: #008000;
   color: #333;
 }
     h1 {
