--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       justify-content: center;
       max-width: 90%;
       margin: 20px auto;
-      background-color: #ffffff;
+      background-color: #008080;
       border-radius: 50px;
       overflow: hidden;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
